[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-coach"
version = "1.0.0"
description = "Post-game coaching reports from Riot match data."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
    "ipykernel>=6",
]
